change page details

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,36 +7,101 @@
             </div>
         </div>
     </div>
+
+    <!--
+    <div class="container">
+        <div class="row">
+            <div class="service-item">
+                <i class="fas fa-laptop"></i>
+                <h3>Hardware and Software Procurement and Installation</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-network-wired"></i>
+                <h3>Network Design, Implementation, and Management</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Cybersecurity and Data Protection Services</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-cloud"></i>
+                <h3>Cloud Computing Solutions and Services</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-chart-line"></i>
+                <h3>IT Consulting and Strategic Planning</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-tasks"></i>
+                <h3>Managed IT Services and Help Desk Support</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-hdd"></i>
+                <h3>Backup and Disaster Recovery Planning and Implementation</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-globe"></i>
+                <h3>Website Design and Development</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-phone"></i>
+                <h3>VoIP Phone Systems and Unified Communications</h3>
+            </div>
+            <div class="service-item">
+                <i class="fas fa-graduation-cap"></i>
+                <h3>Training and Education for Employees on IT Best Practices</h3>
+            </div>
+        </div>
+    </div> -->
+
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-server wow bounceIn text-primary"></i>
+                    <h3>Infrastructure</h3>
+
+                    <ul>
+                        <li>Procurement & Installation</li>
+                        <li>Network Management</li>
+                        <li>Backup & Recovery</li>
+                    </ul>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-shield wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Security</h3>
+                    <ul>
+                        <li>Cybersecurity</li>
+                        <li>Data Protection</li>
+                    </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-cloud wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Cloud</h3>
+                    <ul>
+                        <li>Cloud Solutions</li>
+                    </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <i class="fa fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Communication</h3>
+                    <ul>
+                        <li>IT Consulting</li>
+                        <li>Managed Services</li>
+                        <li>Website & VoIP</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
+
+
+
 </section>
