--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,3 +1,4 @@
+
 <section id="services">
     <div class="container">
         <div class="row">
@@ -7,52 +8,6 @@
             </div>
         </div>
     </div>
-
-    <!--
-    <div class="container">
-        <div class="row">
-            <div class="service-item">
-                <i class="fas fa-laptop"></i>
-                <h3>Hardware and Software Procurement and Installation</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-network-wired"></i>
-                <h3>Network Design, Implementation, and Management</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-shield-alt"></i>
-                <h3>Cybersecurity and Data Protection Services</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-cloud"></i>
-                <h3>Cloud Computing Solutions and Services</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-chart-line"></i>
-                <h3>IT Consulting and Strategic Planning</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-tasks"></i>
-                <h3>Managed IT Services and Help Desk Support</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-hdd"></i>
-                <h3>Backup and Disaster Recovery Planning and Implementation</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-globe"></i>
-                <h3>Website Design and Development</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-phone"></i>
-                <h3>VoIP Phone Systems and Unified Communications</h3>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-graduation-cap"></i>
-                <h3>Training and Education for Employees on IT Best Practices</h3>
-            </div>
-        </div>
-    </div> -->
 
     <div class="container">
         <div class="row">
@@ -72,19 +27,22 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-shield wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Security</h3>
+                    <h3>Cybersecurity</h3>
                     <ul>
-                        <li>Cybersecurity</li>
                         <li>Data Protection</li>
+                        <li>Cloud Security and Compliance</li>
+                        <li>Cloud Disaster Recovery</li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-cloud wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Cloud</h3>
+                    <h3>Cloud Solutions</h3>
                     <ul>
-                        <li>Cloud Solutions</li>
+                        <li>Cloud Monitoring and Management</li>
+                        <li>Cloud Cost Optimization</li>
+                        <li>Cloud Collaboration and Productivity Tools</li>
                     </ul>
                 </div>
             </div>
@@ -96,6 +54,7 @@
                         <li>IT Consulting</li>
                         <li>Managed Services</li>
                         <li>Website & VoIP</li>
+                        <li>Social Media Management</li>
                     </ul>
                 </div>
             </div>
