Edit list items css

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Our Range of Services</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -16,10 +16,10 @@
                     <i class="fa fa-4x fa-server wow bounceIn text-primary"></i>
                     <h3>Infrastructure</h3>
 
-                    <ul>
-                        <li>Procurement & Installation</li>
-                        <li>Network Management</li>
-                        <li>Backup & Recovery</li>
+                    <ul class="list-group">
+                        <li class="list-group-item">Procurement & Installation</li>
+                        <li class="list-group-item">Network Management</li>
+                        <li class="list-group-item">Backup & Recovery</li>
                     </ul>
 
                 </div>
@@ -28,10 +28,10 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-shield wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Cybersecurity</h3>
-                    <ul>
-                        <li>Data Protection</li>
-                        <li>Cloud Security and Compliance</li>
-                        <li>Cloud Disaster Recovery</li>
+                    <ul class="list-group">
+                        <li class="list-group-item">Data Protection</li>
+                        <li class="list-group-item">Cloud Security and Compliance</li>
+                        <li class="list-group-item">Cloud Disaster Recovery</li>
                     </ul>
                 </div>
             </div>
@@ -39,10 +39,10 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-cloud wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Cloud Solutions</h3>
-                    <ul>
-                        <li>Cloud Monitoring and Management</li>
-                        <li>Cloud Cost Optimization</li>
-                        <li>Cloud Collaboration and Productivity Tools</li>
+                    <ul class="list-group">
+                        <li class="list-group-item">Cloud Monitoring and Management</li>
+                        <li class="list-group-item">Cloud Cost Optimization</li>
+                        <li class="list-group-item">Cloud Collaboration and Productivity Tools</li>
                     </ul>
                 </div>
             </div>
@@ -50,11 +50,11 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Communication</h3>
-                    <ul>
-                        <li>IT Consulting</li>
-                        <li>Managed Services</li>
-                        <li>Website & VoIP</li>
-                        <li>Social Media Management</li>
+                    <ul class="list-group">
+                        <li class="list-group-item">IT Consulting</li>
+                        <li class="list-group-item">Managed Services</li>
+                        <li class="list-group-item">Website & VoIP</li>
+                        <li class="list-group-item">Social Media Management</li>
                     </ul>
                 </div>
             </div>
