--- a/_includes/services.html
+++ b/_includes/services.html
@@ -20,6 +20,7 @@
                         <li class="list-group-item">Procurement & Installation</li>
                         <li class="list-group-item">Network Management</li>
                         <li class="list-group-item">Backup & Recovery</li>
+                        <li class="list-group-item">CCTV, Home Automation and IOT Systems</li>
                     </ul>
 
                 </div>
